policies/no-latest-image/constraintemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: nolatesttag
spec:
  crd:
    spec:
      names:
        kind: NoLatestTag
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: "package nolatesttag\n\nvalid(img) if{\n  contains(img, \"@\")\n}\n\nvalid(img) if{\n  contains(img, \":\")\n  not contains(img, \"latest\")\n}\n\nviolation contains {\"msg\" : msg} if{ \n  ns := input.review.object.metadata.namespace\n  some container in input.review.object.spec.containers\n\n  not valid(container.image)\n  msg := sprintf(\"Container(%v, %v) - Uses latest tag\", [container.name, ns])\n}\n"
